change: fix spacing for add currency button and menu buttons in transactions

--- a/src/sass/app/_dashboard.scss
+++ b/src/sass/app/_dashboard.scss
@@ -52,5 +52,8 @@
   cursor: pointer;
 }
 
-// css by Aquibur Rahman Khan end
+.add-currency-link button{
+  margin-bottom: 18px;
+}
 
+// css by Aquibur Rahman Khan end
