--- a/src/sass/app/_transactions.scss
+++ b/src/sass/app/_transactions.scss
@@ -10,7 +10,7 @@
 }
 
 .deposits-menu .deposits-menu-options{
-  padding: 10px 10px 1px 10px;
+  padding: 10px;
   box-sizing: border-box;
 }
 
